<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.mgb.manipalglobalbank.HomeActivity"
    android:background="@color/manipalBlueDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/manipalBlue"
        android:gravity="center"
        android:id="@+id/relativeLayout"
        android:paddingTop="40dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView5"
            android:src="@mipmap/ic_manipal_orange"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView7"
            android:textColor="@color/manipalOrange"
            android:textSize="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="15dp"
            android:paddingLeft="4dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current_balance"
            android:id="@+id/textView8"
            android:textColor="@color/white"
            android:layout_below="@+id/textView7"
            android:layout_alignEnd="@+id/tv_balanceTopView"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tv_balanceTopView"
            android:gravity="bottom|center|end"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="45sp"
            android:layout_below="@+id/textView8"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout2"
        android:layout_above="@+id/logoutBtn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_ten_transaction_btn"
                android:id="@+id/latestTransactionsBtn"
                android:onClick="last10TransactionsOnClick"
                android:textColor="@color/white"
                android:background="@color/manipalOrange"
                android:paddingRight="10dp"
                android:paddingLeft="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statement_btn"
                android:id="@+id/statementBtn"
                android:onClick="statementOnClick"
                android:textColor="@color/white"
                android:background="@color/manipalOrange"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fund_transfer_btn"
                android:id="@+id/transferFundsBtn"
                android:onClick="transferFundsOnClick"
                android:textColor="@color/white"
                android:background="@color/manipalOrange"
                android:paddingRight="10dp"
                android:paddingLeft="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/utility_payment_btn"
                android:id="@+id/utilityPaymentBtn"
                android:gravity="center"
                android:onClick="utilityPaymentOnClick"
                android:textColor="@color/white"
                android:background="@color/manipalOrange"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn"
        android:id="@+id/logoutBtn"
        style="@style/Base.Widget.AppCompat.Button"
        android:onClick="logoutOnClick"
        android:layout_marginBottom="27dp"
        android:textColor="@color/white"
        android:background="@color/manipalOrange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/home_screen_description"
        android:id="@+id/textView9"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/manipalOrange" />

</RelativeLayout>
